--- a/argocd/argocd-aoa/values-aws-core-infra.yaml
+++ b/argocd/argocd-aoa/values-aws-core-infra.yaml
@@ -1,15 +1,15 @@
 charts:
 
-  # # cert-manager for issuing certs
-  # cert-manager:
-  #   # wave defaults to 100
-  #   wave: 1
-  #   repo: https://charts.jetstack.io
-  #   revision: v1.9.1
-  #   chart: cert-manager
-  #   namespace: cert-manager
-  #   values:
-  #     installCRDs: true
+  # cert-manager for issuing certs
+  cert-manager:
+    # wave defaults to 100
+    wave: 1
+    repo: https://charts.jetstack.io
+    revision: v1.9.1
+    chart: cert-manager
+    namespace: cert-manager
+    values:
+      installCRDs: true
 
   aws-load-balancer-controller:
     wave: 1
