--- a/argocd/argocd-aoa/values-redis-tester.yaml
+++ b/argocd/argocd-aoa/values-redis-tester.yaml
@@ -1,4 +1,6 @@
 charts:
   redis-tester:
     wave: 200
-    path: https://github.com/bensolo-io/aws-redis-simple.git/deploy/kustomize
+    kustomize:
+      repo: https://github.com/bensolo-io/aws-redis-simple.git
+      path: deploy/kustomize
