clusterip metrics gw

--- a/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16.yaml
+++ b/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16.yaml
@@ -21,6 +21,7 @@ charts:
         enabled: false
       metricsgateway:
         enabled: true
+        serviceType: ClusterIP
         resources:
           requests:
             cpu: 300m
