clusterip metrics gw

--- a/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16.yaml
+++ b/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16.yaml
@@ -16,7 +16,8 @@ charts:
       licenseSecretName: gloo-mesh-license
       mgmtClusterName: mgmt-cluster
       glooMeshMgmtServer:
-        serviceType: ClusterIP
+        service:
+          type: ClusterIP
       legacyMetricsPipeline:
         enabled: false
       metricsgateway:
