--- a/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16-SIMPLE.yaml
+++ b/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16-SIMPLE.yaml
@@ -41,4 +41,5 @@ charts:
 
   gloo-ilcm:
     wave: 300
+    repo: https://github.com/bensolo-io/cloud-gitops-examples.git
     path: argocd/kustomize/ilcm-istiod/base
