--- a/argocd/argocd-aoa/templates/app.yaml
+++ b/argocd/argocd-aoa/templates/app.yaml
@@ -78,6 +78,8 @@ spec:
     server: https://kubernetes.default.svc
     {{- if ($chart).namespace }}
     namespace: {{ $chart.namespace }}
+    {{- else }}
+    namespace: argocd
     {{- end }}
   syncPolicy:  {{ include "app.syncPolicy" $chart }}
 {{- end }} 
