--- a/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16-SIMPLE.yaml
+++ b/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16-SIMPLE.yaml
@@ -51,6 +51,8 @@ charts:
       cluster: mgmt-cluster
     values:
       cluster: mgmt-cluster
+      relay:
+        serverAddress: "gloo-mesh-mgmt-server.gloo-mesh:9900"
       metricscollector:
         enabled: true
         config:
