--- a/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16-SIMPLE.yaml
+++ b/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16-SIMPLE.yaml
@@ -10,7 +10,7 @@ charts:
     syncPolicy:
       syncOptions: [] # dont create namespace
     globalValues:
-      cluster: mgmt
+      cluster: mgmt-cluster
     values:
       # license secret created via terraform
       licenseSecretName: gloo-mesh-license
