--- a/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16-SIMPLE.yaml
+++ b/argocd/argocd-aoa/values-gm-2.3.0-beta1-istio-1.16-SIMPLE.yaml
@@ -1,7 +1,6 @@
 
-charts: {}
+charts: 
 
-nothing:
   gloo-mesh-enterprise:
     wave: 200
     repo: https://storage.googleapis.com/gloo-mesh-enterprise/gloo-mesh-enterprise
