--- a/argocd/kustomize/ilcm-simple/base/ingressgw.yaml
+++ b/argocd/kustomize/ilcm-simple/base/ingressgw.yaml
@@ -36,7 +36,7 @@ spec:
                 app: istio-ingressgateway
               k8s:
                 service:
-                  type: NodePort
+                  type: ClusterIP
                   selector:
                     istio: ingressgateway
                   # Default ports
