--- a/argocd/kustomize/gloo-mesh-simple/base/httpbin.yaml
+++ b/argocd/kustomize/gloo-mesh-simple/base/httpbin.yaml
@@ -17,16 +17,23 @@
 ##################################################################################################
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: httpbin
+  labels:
+    istio.io/rev: 1-16
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: httpbin
-  namespace: default
+  namespace: httpbin
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: httpbin
-  namespace: default
+  namespace: httpbin
   labels:
     app: httpbin
     service: httpbin
@@ -42,7 +49,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: httpbin
-  namespace: default
+  namespace: httpbin
 spec:
   replicas: 2
   selector:
