--- a/argocd/argocd-aoa/values-ben.yaml
+++ b/argocd/argocd-aoa/values-ben.yaml
@@ -1,1 +1,11 @@
-charts: {}
+charts: 
+
+  gloo-mesh-simple:
+    wave: 1000
+    repo: https://github.com/bensolo-io/cloud-gitops-examples.git
+    path: argocd/kustomize/gloo-mesh-simple/base
+
+  gloo-ilcm-simple:
+    wave: 2000
+    repo: https://github.com/bensolo-io/cloud-gitops-examples.git
+    path: argocd/kustomize/ilcm-simple/overlays/ben
