--- a/argocd/argocd-aoa/values-ben.yaml
+++ b/argocd/argocd-aoa/values-ben.yaml
@@ -1,5 +1,6 @@
-charts: 
+charts: {}
 
+temp:
   gloo-mesh-enterprise:
     wave: 200
     repo: https://storage.googleapis.com/gloo-mesh-enterprise/gloo-mesh-enterprise
