--- a/argocd/argocd-aoa/values-ben.yaml
+++ b/argocd/argocd-aoa/values-ben.yaml
@@ -66,10 +66,10 @@ charts:
             cpu: 600m
             memory: 2Gi
 
-  # gloo-mesh-simple:
-  #   wave: 1000
-  #   repo: https://github.com/bensolo-io/cloud-gitops-examples.git
-  #   path: argocd/kustomize/gloo-mesh-simple/base
+  gloo-mesh-simple:
+    wave: 1000
+    repo: https://github.com/bensolo-io/cloud-gitops-examples.git
+    path: argocd/kustomize/gloo-mesh-simple/base
 
   # gloo-ilcm-simple:
   #   wave: 2000
