--- a/argocd/argocd-aoa/values-ben.yaml
+++ b/argocd/argocd-aoa/values-ben.yaml
@@ -1,75 +1,75 @@
-charts: {}
+charts: 
 
-  # gloo-mesh-enterprise:
-  #   wave: 200
-  #   repo: https://storage.googleapis.com/gloo-mesh-enterprise/gloo-mesh-enterprise
-  #   chart: gloo-mesh-enterprise
-  #   revision: v2.3.0-beta1
-  #   namespace: gloo-mesh
-  #   syncPolicy:
-  #     syncOptions: [] # dont create namespace
-  #   globalValues:
-  #     cluster: mgmt-cluster
-  #   values:
-  #     # license secret created via terraform
-  #     licenseSecretName: gloo-mesh-license
-  #     mgmtClusterName: mgmt-cluster
-  #     glooMeshMgmtServer:
-  #       serviceType: ClusterIP
-  #     legacyMetricsPipeline:
-  #       enabled: false
-  #     metricsgateway:
-  #       enabled: true
-  #       service:
-  #         type: ClusterIP
-  #       resources:
-  #         requests:
-  #           cpu: 300m
-  #           memory: 1Gi
-  #         limits:
-  #           cpu: 600m
-  #           memory: 2Gi
-  #     deploymentOverrides:
-  #       spec:
-  #         template:
-  #           metadata:
-  #             annotations:
-  #               sidecar.istio.io/inject: "true"
-  #             labels:
-  #               istio.io/rev: "1-16"
+  gloo-mesh-enterprise:
+    wave: 200
+    repo: https://storage.googleapis.com/gloo-mesh-enterprise/gloo-mesh-enterprise
+    chart: gloo-mesh-enterprise
+    revision: v2.3.0-beta1
+    namespace: gloo-mesh
+    syncPolicy:
+      syncOptions: [] # dont create namespace
+    globalValues:
+      cluster: mgmt-cluster
+    values:
+      # license secret created via terraform
+      licenseSecretName: gloo-mesh-license
+      mgmtClusterName: mgmt-cluster
+      glooMeshMgmtServer:
+        serviceType: ClusterIP
+      legacyMetricsPipeline:
+        enabled: false
+      metricsgateway:
+        enabled: true
+        service:
+          type: ClusterIP
+        resources:
+          requests:
+            cpu: 300m
+            memory: 1Gi
+          limits:
+            cpu: 600m
+            memory: 2Gi
+      deploymentOverrides:
+        spec:
+          template:
+            metadata:
+              annotations:
+                sidecar.istio.io/inject: "true"
+              labels:
+                istio.io/rev: "1-16"
 
-  # gloo-agent:
-  #   wave: 300
-  #   repo: https://storage.googleapis.com/gloo-mesh-enterprise/gloo-mesh-agent
-  #   chart: gloo-mesh-agent
-  #   revision: v2.3.0-beta1
-  #   namespace: gloo-mesh
-  #   syncPolicy:
-  #     syncOptions: [] # dont create namespace
-  #   globalValues:
-  #     cluster: mgmt-cluster
-  #   values:
-  #     cluster: mgmt-cluster
-  #     relay:
-  #       serverAddress: "gloo-mesh-mgmt-server.gloo-mesh:9900"
-  #     metricscollector:
-  #       enabled: true
-  #       config:
-  #         exporters:
-  #           otlp:
-  #             endpoint: gloo-metrics-gateway.gloo-mesh.svc.cluster.local:4317
-  #       resources:
-  #         requests:
-  #           cpu: 300m
-  #           memory: 1Gi
-  #         limits:
-  #           cpu: 600m
-  #           memory: 2Gi
+  gloo-agent:
+    wave: 300
+    repo: https://storage.googleapis.com/gloo-mesh-enterprise/gloo-mesh-agent
+    chart: gloo-mesh-agent
+    revision: v2.3.0-beta1
+    namespace: gloo-mesh
+    syncPolicy:
+      syncOptions: [] # dont create namespace
+    globalValues:
+      cluster: mgmt-cluster
+    values:
+      cluster: mgmt-cluster
+      relay:
+        serverAddress: "gloo-mesh-mgmt-server.gloo-mesh:9900"
+      metricscollector:
+        enabled: true
+        config:
+          exporters:
+            otlp:
+              endpoint: gloo-metrics-gateway.gloo-mesh.svc.cluster.local:4317
+        resources:
+          requests:
+            cpu: 300m
+            memory: 1Gi
+          limits:
+            cpu: 600m
+            memory: 2Gi
 
-  # gloo-mesh-simple:
-  #   wave: 1000
-  #   repo: https://github.com/bensolo-io/cloud-gitops-examples.git
-  #   path: argocd/kustomize/gloo-mesh-simple/base
+  gloo-mesh-simple:
+    wave: 1000
+    repo: https://github.com/bensolo-io/cloud-gitops-examples.git
+    path: argocd/kustomize/gloo-mesh-simple/base
 
   # gloo-ilcm-simple:
   #   wave: 2000
