--- a/argocd/argocd-aoa/values.yaml
+++ b/argocd/argocd-aoa/values.yaml
@@ -1,7 +1,1 @@
-defaults:
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-    - CreateNamespace=true
+createNamespace: false
