--- a/argocd/argocd-aoa/templates/app.yaml
+++ b/argocd/argocd-aoa/templates/app.yaml
@@ -81,5 +81,6 @@ spec:
     {{- else }}
     namespace: argocd
     {{- end }}
-  syncPolicy:  {{ include "app.syncPolicy" $chart }}
+    syncOptions:
+    - CreateNamespace={{ if ($chart).createNamespace }}{{ $chart.createNamespace }}{{ else }}{{  $root.Values.createNamespace }}{{end}}
 {{- end }} 
